Add html content & button to start game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     </head>
 
     <body>
+        <h1>Rock, Paper, Scissors</h1>
+        
+        <p></p> <!--Temporary new lines-->
+        <a>Test your rock, paper, scissors skill against the worlds most ADVANCED Ai.</a>
+        <p></p> <!--Temporary new lines-->
+        <a>This is a TOTALLY fair test.</a>
+        <p></p> <!--Temporary new lines-->
+        <button onclick="playRound()"">START GAME</button>
 
     </body>
 </html>
