Update query events

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Rock, Paper, Scissors!</title>
         <meta charset="UTF-8">
-        <script src="code.js"></script>
+        <script src="code.js" defer></script>
     </head>
 
     <body>
@@ -14,7 +14,13 @@
         <p></p> <!--Temporary new lines-->
         <a>This is a TOTALLY fair test.</a>
         <p></p> <!--Temporary new lines-->
-        <button onclick="playRound()"">START GAME</button>
+
+        <button id="btnRock">ROCK</button>
+        <button id="btnPaper">PAPER</button>
+        <button id="btnScissors">SCISSORS</button>
+
+        <div class="results"></div>
 
     </body>
+
 </html>
