Add console.log to DOM

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
         <a>This is a TOTALLY fair test.</a>
         <p></p> <!--Temporary new lines-->
 
-
         <button id="btnRock">ROCK</button>
         <button id="btnPaper">PAPER</button>
         <button id="btnScissors">SCISSORS</button>
 
-        <div class="results"></div>
+        <div id="results"></div>
     </body>
 
 </html>
