Add interactive messages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button id="btnScissors">SCISSORS</button>
 
         <div id="results"></div>
+        <div id="score"></div>
     </body>
 
 </html>
